# plumb

./: .gitignore  pyproject.toml
plumb/: cli.py  coverage_reporter.py  decision_log.py  git_hook.py  ignore.py  sync.py
plumb/programs/: __init__.py  claude_code_lm.py  code_modifier.py
tests/: test_background_hook_gate.py  test_claude_code_integration.py  test_claude_code_lm.py  test_cli.py  test_git_hook.py  test_git_hook_extended.py  test_hook_model_routing.py  test_integration.py  test_program_model_overrides.py  test_programs.py  test_worktree_index_corruption.py
