[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plumb-dev"
version = "0.2.4"
description = "Keep spec, tests, and code in sync during AI-assisted development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy",
    "anthropic",
    "pytest",
    "pytest-cov",
    "gitpython",
    "click",
    "rich",
    "jsonlines",
    "duckdb",
    "python-dotenv",
]

[project.scripts]
plumb = "plumb.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["plumb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
